--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "aws-amplify": "^5.3.5",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
