--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.4",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@tanstack/react-table": "^8.9.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.3.5",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
-    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.0.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
