--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-table": "^8.9.3",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2"
