--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -2,13 +2,13 @@ projects:
   thatplacesucks:
     schemaPath: amplify/backend/api/thatplacesucks/build/schema.graphql
     includes:
-      - src/graphql/**/*.js
+      - src/graphql/**/*.ts
     excludes:
       - ./amplify/**
     extensions:
       amplify:
-        codeGenTarget: javascript
-        generatedFileName: ''
+        codeGenTarget: typescript
+        generatedFileName: src/API.ts
         docsFilePath: src/graphql
         region: us-east-1
         apiId: null
