--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
