--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
+    "rxjs": "^7.8.1",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
