--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "@tanstack/react-table": "^8.9.3",
+    "aws-amplify": "^5.3.10",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
-    "rxjs": "^7.8.1",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
